[gd_scene load_steps=6 format=2]

[ext_resource path="res://Ảnh-nền-62.png" type="Texture" id=1]
[ext_resource path="res://Game over.gd" type="Script" id=2]

[sub_resource type="Animation" id=1]
length = 0.001

[sub_resource type="Animation" id=3]
resource_name = "appear"
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "fading"
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[node name="Game over" type="Node2D"]
position = Vector2( -19, -76 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 502, 343.937 )
scale = Vector2( 0.966, 0.670963 )
texture = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 100.0
margin_top = 514.0
margin_right = 800.0
margin_bottom = 558.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Restart" type="Button" parent="VBoxContainer"]
margin_right = 700.0
margin_bottom = 20.0
focus_neighbour_top = NodePath("../Menu")
custom_colors/font_color_disabled = Color( 0.101961, 0.929412, 0.890196, 1 )
custom_colors/font_color_focus = Color( 0.101961, 0.929412, 0.890196, 1 )
custom_colors/font_color_pressed = Color( 0.101961, 0.929412, 0.890196, 1 )
text = "Restart"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 700.0
margin_bottom = 44.0
focus_neighbour_bottom = NodePath("../Restart")
custom_colors/font_color_disabled = Color( 0.133333, 0.941176, 0.890196, 0.803922 )
custom_colors/font_color_focus = Color( 0.101961, 0.929412, 0.890196, 1 )
custom_colors/font_color_pressed = Color( 0.101961, 0.929412, 0.890196, 1 )
text = "Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer"]
root_node = NodePath("../..")
anims/RESET = SubResource( 1 )
anims/appear = SubResource( 3 )
anims/fading = SubResource( 2 )

[connection signal="pressed" from="VBoxContainer/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="VBoxContainer/Menu" to="." method="_on_Quit_pressed"]
[connection signal="animation_finished" from="CanvasLayer/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
